--- a/index.html
+++ b/index.html
@@ -2,46 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./normalize.css">
   <title>Frontend Mentor | Results summary component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <section>
+    <h1>Your Result</h1>
+    <div>
+      <p>76</p>
+      <span>of 100</span>
+    </div>
 
-  Your Result
-  76
-  of 100
+    <p>Great
+      You scored higher than 65% of the people who have taken these tests.</p>
+  </section>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+  <section>
+    <h2>Summary</h2>
+    <div>
+      <h3>Reaction</h3>
+      <p>80 / 100</p>
+    </div>
+    <div>
+      <h3>Memory</h3>
+      <p>92 / 100</p>
+    </div>
+    <div>
+      <h3>Verbal</h3>
+      <p>61 / 100</p>
+    </div>
+    <div>
+      <h3>Visual</h3>
+      <p>72 / 100</p>
+    </div>
+    <button>
+      Continue
+    </button>
+  </section>
 
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Christopher d'Arcy</a>.
+  </footer>
 </body>
 </html>
