--- a/index.html
+++ b/index.html
@@ -10,39 +10,40 @@
 </head>
 
 <body>
-  <section>
-    <h1>Your Result</h1>
-    <div>
-      <p>76</p>
-      <span>of 100</span>
-    </div>
-
-    <p>Great
-      You scored higher than 65% of the people who have taken these tests.</p>
-  </section>
-
-  <section>
-    <h2>Summary</h2>
-    <div>
-      <h3>Reaction</h3>
-      <p>80 / 100</p>
-    </div>
-    <div>
-      <h3>Memory</h3>
-      <p>92 / 100</p>
-    </div>
-    <div>
-      <h3>Verbal</h3>
-      <p>61 / 100</p>
-    </div>
-    <div>
-      <h3>Visual</h3>
-      <p>72 / 100</p>
-    </div>
-    <button>
-      Continue
-    </button>
-  </section>
+  <main class="content">
+    <section class="result-card">
+      <h1>Your Result</h1>
+      <div class="circle">
+        <h2>76</h2>
+        <span>of 100</span>
+      </div>
+      <h3>Great</h3>
+      <p>You scored higher than 65% of the people who have taken these tests.</p>
+    </section>
+  
+    <section>
+      <h2>Summary</h2>
+      <div>
+        <h3>Reaction</h3>
+        <p>80 / 100</p>
+      </div>
+      <div>
+        <h3>Memory</h3>
+        <p>92 / 100</p>
+      </div>
+      <div>
+        <h3>Verbal</h3>
+        <p>61 / 100</p>
+      </div>
+      <div>
+        <h3>Visual</h3>
+        <p>72 / 100</p>
+      </div>
+      <button>
+        Continue
+      </button>
+    </section>
+  </main>
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
