style summary card, style gradient backgrounds in results card

--- a/index.html
+++ b/index.html
@@ -21,23 +21,27 @@
       <p>You scored higher than 65% of the people who have taken these tests.</p>
     </section>
   
-    <section>
+    <section class="summary-card">
       <h2>Summary</h2>
-      <div>
+      <div class="category-row-card" id="reaction-card">
+        <img src="./assets/images/icon-reaction.svg" alt="">
         <h3>Reaction</h3>
-        <p>80 / 100</p>
+        <p> <span> 80 </span> / 100</p>
       </div>
-      <div>
+      <div class="category-row-card" id="memory-card">
+        <img src="./assets/images/icon-memory.svg" alt="">
         <h3>Memory</h3>
-        <p>92 / 100</p>
+        <p> <span> 92 </span> / 100</p>
       </div>
-      <div>
+      <div class="category-row-card" id="verbal-card">
+        <img src="./assets/images/icon-verbal.svg" alt="">
         <h3>Verbal</h3>
-        <p>61 / 100</p>
+        <p> <span> 61 </span> / 100</p>
       </div>
-      <div>
+      <div class="category-row-card" id="visual-card">
+        <img src="./assets/images/icon-visual.svg" alt="">
         <h3>Visual</h3>
-        <p>72 / 100</p>
+        <p> <span> 72 </span> / 100</p>
       </div>
       <button>
         Continue
